address sonar code smells, build